add new nav in nav

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="#" class="nav-item white-text">Blog</a>
             <a href="#" class="nav-item white-text">Cherry</a>
             <a href="#" class="nav-item white-text">Contact</a>
+            <a href="#" class="nav-item white-text">GItHub</a>
           </nav>
         </div>
       </div>
